# rainroute

backend/: .env.example  README.md  pyproject.toml
backend/app/: classify.py  config.py  deps.py  geocode.py  geometry.py  main.py  models.py  palette.py  pixel.py  radar.py  routing.py
backend/tests/: test_api.py  test_classify.py  test_geocode.py  test_geometry.py  test_models.py  test_palette.py  test_pixel.py  test_radar.py  test_radar_png.py  test_routing.py
docs/specs/: 2026-07-21-rainroute-design.md
docs/superpowers/plans/: 2026-07-21-rainroute-backend.md  2026-07-21-rainroute-frontend.md
frontend/: .env.example  App.tsx  app.config.ts  package-lock.json  package.json
frontend/src/: MainScreen.tsx  api.ts  config.ts  types.ts
frontend/src/__tests__/: RainLegend.test.tsx  RouteSearch.test.tsx  VerdictBanner.test.tsx  api.test.ts  config.test.ts
frontend/src/components/: RainLegend.tsx  RainMap.tsx  RouteSearch.tsx  VerdictBanner.tsx
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  MainScreen.css  MainScreen.tsx  api.test.ts  api.ts  config.ts  index.css  types.ts
web/src/components/: RainLegend.css  RainLegend.tsx  RainMap.tsx  RouteSearch.css  RouteSearch.dom.test.tsx  RouteSearch.test.ts  RouteSearch.tsx  VerdictBanner.css  VerdictBanner.tsx
